Fix drafts, de, and sentinels

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -113,7 +113,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
 
   \item Enemy armies have 3 \svg{movement} per Round.
-  \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
+  \item Enemy armies move at the end of every Round, starting with the Round they spawned.
   \item Enemy armies move as described in the rulebook (p.\,33), but instead of capturing, they destroy everything in their path.
     Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.
   \item If an enemy's movement could go in different directions, the players decide which way they go.
