--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -476,7 +476,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Wenn ein Held die Festung der Titanen betritt, zieht ihr 5 Karten vom Stapel der Festung der Titanen anstatt von den neutrale Einheiten-Stapeln. Die Einheiten werden auf dem Kampf-Spielplan platziert (siehe Seite 29 in der Anleitung). Die Spieler versuchen, die Einheiten zu besiegen, die sie in der Festung der Titanen finden. Alle neutralen Einheiten, die während des Kampfes besiegt werden, werden zurück in die neutrale Einheiten-Stapel gelegt. Alle neutralen Einheiten, die den Kampf überleben, werden in das Deck der Festung der Titanen gemischt. Sollten nicht genügend Karten in diesem Deck vorhanden sein, zieht so viele Karten wie möglich und platziert sie auf dem Kampf-Spielplan.\n"
-"  \\item Es kostet in der Festung 1 \\svgeven{movement}, um einen Kampf um eine Kampfrunde zu verlängern, genau wie bei Kämpfen gegen nicht-Azur-Einheiten.\n"
+"  \\item Es kostet in der Festung 1 \\svg{movement}, um einen Kampf um eine Kampfrunde zu verlängern, genau wie bei Kämpfen gegen nicht-Azur-Einheiten.\n"
 "  \\item Zusätzlich kann kein Spieler:\n"
 "  \\begin{itemize}\n"
 "    \\item Andere Helden angreifen.\n"
