[PL] Translate trial by combat

--- a/translations/trial_by_combat.tex/pl.po
+++ b/translations/trial_by_combat.tex/pl.po
@@ -69,13 +69,12 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: clash/trial_by_combat.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Clash Scenario}{The Hunt}{\\images/slayer.png}"
 msgid ""
 "\\addscenariosection{1}{King of the Hill Scenario}{Trial by Combat}{\\images/"
 "crusader.png}"
-msgstr "\\addscenariosection{1}{Tryb Starcia}{Polowanie}{\\images/slayer.png}"
+msgstr ""
+"\\addscenariosection{1}{Król na wzgórzu}{Sąd przez Walkę}{\\images/"
+"crusader.png}"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:7
@@ -94,21 +93,19 @@ msgid ""
 "\\textit{There is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}\n"
 "\n"
 msgstr ""
+"\\textit{Nie ma honoru — tylko zwycięstwo lub śmierć. Słabi upadną, silni staną do walki, a tylko jeden będzie panował.}\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:12
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
-#| "This Scenario is played over 13 Rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "This Scenario plays out over 8-10 Rounds.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
-"Ten Scenariusz rozgrywany jest w 13 Rundach.\n"
+"Ten Scenariusz rozgrywany jest w 8-10 Rundach.\n"
 "\n"
 
 #. type: multicols*
@@ -125,14 +122,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:25
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item  1 × A Few cheapest \\bronze\\ Units\n"
-#| "  \\item  1 × A Few cheapest \\silver\\ Units\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -143,51 +133,36 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Garstka najtańszych \\bronze\\ Jednostek\n"
-"  \\item 1 × Garstka najtańszych \\silver\\ Jednostek\n"
+"  \\item Garstka najtańszych \\silver\\ Jednostek\n"
+"  \\item Wybrana Neutralna \\bronze\\ Jednostka odpowiadająca Fakcji gracza\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:27
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Mage Guild\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko, Cytadela\n"
+"\\textbf{Budynki Początkowe:} \\bronze\\ Siedlisko, Gildia Magów\n"
 "\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:30
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Map Setup}}\n"
-#| "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
-"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy Scenariusza:\n"
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy Scenariusza ($G$ oznacza liczbę graczy):\n"
 "\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:38
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item P × Starting (I) Map Tile\n"
-#| "  \\item P × Far (II--III) Map Tile\n"
-#| "  \\item P × Near (IV--V) Map Tile, all of which must contain an Obelisk\n"
-#| "  \\item 1 × Center (VI--VII) Map Tile which must contain a Dragon Utopia\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item P × Starting (I) Map Tile\n"
@@ -200,9 +175,10 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item G × Początkowy (I) Kafelek Mapy\n"
-"  \\item G × Daleki (II--III) Kafelek Mapy\n"
-"  \\item G × Bliski (IV--V) Kafelek Mapy, wszystkie muszą zawierać Obelisk\n"
-"  \\item 1 × Centralny (VI--VII) Kafelek Mapy ze Smoczą Utopią\n"
+"  \\item 2G × Daleki (II--III) Kafelek Mapy\n"
+"  \\item G × Bliski (IV--V) Kafelek Mapy z Obeliskiem przy Centralnym Kafelku\n"
+"  \\item G × Bliski (IV--V) Kafelek Mapy bez Obelisku\n"
+"  \\item 1 × Centralny (VI--VII) Kafelek Mapy; centralne pole to ,,Wzgórze''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -214,25 +190,13 @@ msgid ""
 "When any player first flags ``The Hill'', each player, including the one who flagged it, gets two more full turns. After all players have completed their turns, the game ends, and the player who controls ``The Hill'' at that time wins. However, if ``The Hill'' has not been flagged by the start of Round 9, the first player to flag it during or after Round 9 immediately wins the game.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunek Zwycięstwa}}\n"
+"Gdy jakikolwiek gracz po raz pierwszy oflaguje ,,Wzgórze'', każdy gracz, włączając tego, który je oflagował, otrzymuje jeszcze dwie pełne tury. Po tym, jak wszyscy gracze ukończą swoje tury, gra się kończy, a gracz kontrolujący ,,Wzgórze'' wygrywa. Jeśli ,,Wzgórze'' nie zostało oflagowane do początku 9. Rundy, pierwszy gracz, który je oflaguje podczas 9. Rundy lub później, natychmiast wygrywa grę.\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:63
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Timed Events}}\n"
-#| "\\textbf{\\nth{4} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Roll a \\svg{resource} and resolve the result.\n"
-#| "\\end{itemize}\n"
-#| "\\textbf{\\nth{6} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the event of Round 4.\n"
-#| "\\end{itemize}\n"
-#| "\\textbf{\\nth{8} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the event of Round 4.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\\textbf{\\nth{1} Round:}\n"
@@ -258,17 +222,25 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Wydarzenia Czasowe}}\n"
+"\\textbf{1. Runda:}\n"
+"\\begin{itemize}\n"
+"  \\item Wszyscy Bohaterowie otrzymują +1 \\svg{movement}.\n"
+"\\end{itemize}\n"
+"\\textbf{2. Runda:}\n"
+"\\begin{itemize}\n"
+"  \\item Gracze otrzymują 10~\\svg{gold}, 4~\\svg{building_materials} albo 2~\\svg{valuables}.\n"
+"\\end{itemize}\n"
 "\\textbf{4. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Rzuć \\svg{resource} i rozpatrz wynik.\n"
+"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego, Mistycznego Ogrodu, Ogniska i Puszki Pandory.\n"
 "\\end{itemize}\n"
-"\\textbf{6. Runda:}\n"
+"\\textbf{7. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Powtórz wydarzenie z Rundy 4.\n"
+"  \\item Powtórz Wydarzenie Czasowe z 4. Rundy.\n"
 "\\end{itemize}\n"
 "\\textbf{8. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Powtórz wydarzenie z Rundy 4.\n"
+"  \\item Wszyscy Bohaterowie otrzymują +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -288,6 +260,17 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
+"\\begin{itemize}\n"
+"  \\item Gracze otrzymują dochód w każdej Rundzie.\n"
+"  \\item Zablokowane Pole na Centralnym Kafelku to Magiczne Źródło i nie liczy się jako zablokowane.\n"
+"  \\item Wszystkie Pola na Centralnym Kafelku można odwiedzić raz na Frakcję.\n"
+"  \\item Gracze nie tracą \\svg{gold} za przegranie lub wycofanie się z jakiejkolwiek Walki.\n"
+"  \\item Po wygraniu Walki z innym Bohaterem Głównym lub Jednostkami Neutralnymi VII poziomu możesz zrekrutować lub wzmocnić jedną ze swoich pokonanych w tej bitwie Jednostek (zredukowaną do 0 punktów życia) za darmo.\n"
+"  \\item \\textbf{Obelisk:} Po oflagowaniu możesz umieścić tu swojego pokonanego Bohatera Głównego. \\textit{Flagowalny dla wszystkich graczy.}\n"
+"  \\item \\textit{Opcjonalnie:} Na początku każdej Rundy rzuć dwie Kości Ataku i zastosuj efekt:\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:103
@@ -323,6 +306,35 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\\hommtablemulticol[]{32}{\n"
+"  \\centering\n"
+"  \\medskip\n"
+"  \\textbf{Warunki Pola Bitwy}\\\\\n"
+"  \\medskip\n"
+"\n"
+"  \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX}\\\\\n"
+"  \\darkcell[1.4]{-1/-1}\n"
+"    & \\lightcell[1.4]{Gęsta mgła – Jednostki \\svg{unit_ranged-yellow} atakują z karą.}\\\\\n"
+"  \\darkcell[1.4]{-1/0}\n"
+"    & \\lightcell[1.4]{Deszcz popiołu – Jednostki \\svg{unit_flying-yellow} otrzymują -2 \\svg{initiative-yellow}.}\\\\\n"
+"  \\darkcell[1.4]{-1/+1}\n"
+"    & \\lightcell[1.4]{Spalona ziemia – Jednostki \\silver\\ i \\golden\\ zaczynają Walkę z 1 \\svg{damage-yellow}.}\\\\\n"
+"  \\darkcell[1.4]{0/-1}\n"
+"    & \\lightcell[1.4]{Grząskie błoto – Jednostki \\svg{unit_ground-yellow} poruszają się o jedno pole mniej.}\\\\\n"
+"  \\darkcell[1.0]{0/0}\n"
+"    & \\lightcell[1.0]{Czyste niebo – brak efektu.}\\\\\n"
+"  \\darkcell[1.4]{0/+1}\n"
+"    & \\lightcell[1.4]{Skalisty teren – Jednostki \\svg{unit_ground-yellow} otrzymują Żeton \\svg{defense-yellow}.}\\\\\n"
+"  \\darkcell[1.8]{+1/-1}\n"
+"    & \\lightcell[1.8]{Figiel wróżek – gracze aktywują swoje Jednostki w kolejności rosnącej inicjatywy.}\\\\\n"
+"  \\darkcell[1.4]{+1/0}\n"
+"    & \\lightcell[1.4]{Wiatr w plecy – Jednostki \\svg{unit_flying-yellow} poruszają się o jedno pole więcej.}\\\\\n"
+"  \\darkcell[1.4]{+1/+1}\n"
+"    & \\lightcell[1.4]{Idealne warunki – Jednostki \\svg{unit_ranged-yellow} atakują z ułatwieniem.}\\\\\n"
+"  \\end{tabularx}\n"
+"}\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:108
@@ -334,16 +346,16 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\vspace*{-1em}\n"
+"\\begin{itemize}\n"
+"  \\item Po wygraniu Walki z Jednostkami Neutralnymi możesz poświęcić 2 Jednostki \\bronze\\, aby otrzymać 1 Jednostkę \\silver{}, którą pokonałeś.\n"
+"  \\item Gdy Bohater Główny zostanie pokonany, na początku następnej tury tego gracza może on wzmocnić dowolną Kartę Statystyk ze swojej Talii M\\&M i Przeszukać (2) Talię Jednostek \\silver{} Neutralnych.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/trial_by_combat.tex:117
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=0.7\\linewidth]{\\maps/stand_united_2p.png}\n"
-#| "  \\captionof{figure}{\\footnotesize\\textbf{2-PLAYER SCENARIO}}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{center}\n"
 "  \\vfill\n"
@@ -356,7 +368,11 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.7\\linewidth]{\\maps/stand_united_2p.png}\n"
-"  \\captionof{figure}{\\footnotesize\\textbf{SCENARIUSZ 2-OSOBOWY}}\n"
+"  \\vfill\n"
+"  \\includegraphics[width=1.0\\linewidth]{\\maps/trial_by_combat-2.4p.png}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 2/4-OSOBOWY}}\n"
+"  \\vfill\n"
+"  \\includegraphics[width=1.0\\linewidth]{\\maps/trial_by_combat-3p.png}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 3-OSOBOWY}}\n"
 "\\end{center}\n"
 "\n"
