--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -183,7 +183,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Wolna amerykanka} -- Wygraj eliminując swoich przeciwników lub zdobywając najwięcej Punktów Zwycięstwa (PZ).\n"
+"\\textbf{Potyczka} -- Wygraj eliminując swoich przeciwników lub zdobywając najwięcej Punktów Zwycięstwa (PZ).\n"
 "PZ są liczone zgodnie z Księgą Turniejów.\n"
 "Dodatkowo otrzymujesz:\n"
 "\\begin{itemize}\n"
@@ -202,7 +202,7 @@ msgid ""
 "You get 1 VP for each Round you hold the Dragon Utopia under your control, no VPs from anything else.\n"
 "\n"
 msgstr ""
-"\\textbf{Król na wzgórzu} -- Rozpocznij mapę ze Smoczą Utopią pośrodku.\n"
+"\\textbf{Król wzgórza} -- Rozpocznij mapę ze Smoczą Utopią pośrodku.\n"
 "Nie musisz toczyć Walki Poziomu 7, aby ją zdobyć.\n"
 "Otrzymujesz 1 PZ za każdą Rundę, w której trzymasz Smoczą Utopię pod swoją kontrolą, żadnych PZ z niczego innego.\n"
 "\n"
@@ -324,7 +324,7 @@ msgstr ""
 "  \\textbf{Centralne Kafelki Mapy}\\\\\n"
 "  \\bigskip\n"
 "  \\hspace{-0.7em}\n"
-"  \\begin{tabularx}{0.99\\linewidth}{p{1.7em}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}X} & \\darkcell[1.8]{Wolna amerykanka} & \\darkcell[1.8]{Król na wzgórzu} & \\darkcell[1.8]{Zdobądź Graal} \\\\\n"
+"  \\begin{tabularx}{0.99\\linewidth}{p{1.7em}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}X} & \\darkcell[1.4]{Potyczka} & \\darkcell[1.4]{Król wzgórza} & \\darkcell[1.4]{Zdobądź Graal} \\\\\n"
 "    \\darkcell[1.8]{S}\n"
 "    & \\lightcell[1.8]{\\includegraphics[width=0.75\\linewidth]{\\maps/near-tile.png}}\n"
 "    & \\multirow{3}{*}[7.6ex]{\\parbox{\\linewidth}{\\centering\\lightcell[6.19]{\\includegraphics[width=0.75\\linewidth]{\\maps/center-tile.png} ze Smoczą Utopią (C1 albo C3)}}}\n"
@@ -372,8 +372,8 @@ msgid ""
 "Center (VI-VII) Map Tile in the middle, and then proceed to distribute Near "
 "(IV-V) Map Tiles in the following order:"
 msgstr ""
-"Przykład poniżej pokazuje budowanie mapy dla \\textbf{3-osobowej XL-ki "
-"wolnej amerykanki}, z graczem 1 grającym jako \\textcolor{rampartbg}"
+"Przykład poniżej pokazuje budowanie mapy dla \\textbf{3-osobowej XL "
+"potyczki}, z graczem 1 grającym jako \\textcolor{rampartbg}"
 "{\\textbf{Bastion}}, graczem 2 jako \\textcolor{infernobg}"
 "{\\textbf{Inferno}}, i graczem 3 jako \\textcolor{castlebg}"
 "{\\textbf{Zamek}}. Umieść Centralny (VI-VII) Kafelek pośrodku, a następnie "
